chore : swagger, response, exception, cors 관련 기본 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=hodeum
 
 spring.profiles.active=local
 
-app.cors.allowedOrigins=http://localhost:3000,https://addit-web-dev.vercel.app,https://add-it.vercel.app
+app.cors.allowedOrigins=http://localhost:3000
