--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=hodeum
 
-spring.profiles.active=local
+spring.profiles.active=prod
 
 app.cors.allowedOrigins=http://localhost:3000
